--- a/video-live-app/livevideo/PasswortRuecksetzen.xaml
+++ b/video-live-app/livevideo/PasswortRuecksetzen.xaml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="livevideo.LoginsPage">
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="livevideo.PasswortRuecksetzen">
     <ContentPage.Content>
-        <Grid x:Name="controlGrid" RowSpacing="1" ColumnSpacing="1">
+        <Grid x:Name="controlGridRe" RowSpacing="1" ColumnSpacing="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="150" />
                 <RowDefinition Height="500" />
@@ -14,19 +14,14 @@
                 <Label Text="Willkommen bei Daniel Brandon Live App" TextColor="Blue" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" FontSize="20" />
             </StackLayout>
             <StackLayout Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Center" Margin="0,80,0,0">
-                <Entry Placeholder="Email-Adresse oder Benutzernamee" TextColor="Black" Keyboard="Email" />
+                <Entry Placeholder="Email-Adresse" TextColor="Black" Keyboard="Email" />
                 <Entry Placeholder="Password" IsPassword="true" TextColor="Black" Keyboard="Default" />
+                <Entry Placeholder="Password Wiederholen" IsPassword="true" TextColor="Black" Keyboard="Default" />
                 <StackLayout Orientation="Horizontal" Padding="15">
                     <Switch />
-                    <Label Text="Loginsdaten merken" />
+                    <Label Text="Passwort generieren " />
                 </StackLayout>
-                <Button Text="Einloggen" BackgroundColor="Lime" />
-                <Label Text="Passwort vergessen ?" TextColor="Blue" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" FontSize="20" Margin="0,10,0,0" />
-                <Label />
-                <BoxView HeightRequest="1" BackgroundColor="Black" HorizontalOptions="FillAndExpand" />
-                <Label />
-                <Label Text="Neu bei uns ?" TextColor="Blue" FontSize="20" Margin="0,10,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" />
-                <Button x:Name="Button_Registrieren_Login" Text="Registrieren" BackgroundColor="Gray" Clicked="Button_Registrieren_Login_Clicked" />
+                <Button Text="Zurücksetzen" BackgroundColor="Lime"  />
                 <Label />
                 <BoxView HeightRequest="1" BackgroundColor="Black" HorizontalOptions="FillAndExpand" />
                 <Label />
